# aoc-2024

./: .gitignore  README.md  aoc-zouppen.cabal  log.md
boilerplate/: README.md  new_day
inputs/: README.md
puzzles/: README.md
src/: Day.hs  Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day08Debug.hs  Day09.hs  Day09Debug.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day14Debug.hs  Day15.hs  Day15Debug.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day22.hs  Grid.hs  GridTools.hs  Main.hs  Tonttu.hs  Tontut.hs  Wastl.hs
src/AocTools/: Everyday.hs  Grid.hs  GridTools.hs  Routing.hs  Wastl.hs
tools/: README.md  new_day
