cabal-version: 3.4
name:          aoc-zouppen
version:       2024.12.2
synopsis:      Zouppen's Advent of Code framework
description:   Advent of Code framework and solutions by Zouppen for year 2024
category:      Code Competitions
license:       GPL-3.0-or-later
license-file:  LICENSE
author:        Joel Lehtonen
maintainer:    joel.lehtonen@iki.fi
build-type:    Simple

source-repository head
  type: git
  location: https://github.com/zouppen/aoc-2024.git

common defaults
    default-language: Haskell2010
    ghc-options:      -Wall

Executable aoc-zouppen-2024
  import:         defaults
  Hs-Source-Dirs: src
  Main-Is:        Main.hs
  other-modules:
    Day
    Day01
    Day02
    Tonttu
    Tontut
  Build-Depends:
    base >= 4.9.0.0 && < 5,
    attoparsec ^>= 0.14,
    aeson ^>= 2.0 || ^>= 2.1,
    bytestring ^>= 0.10 || ^>= 0.11,
    cmdargs ^>= 0.7 || ^>= 0.9 || ^>= 0.10,
    containers ^>= 0.6,
    filepath ^>= 1.2.0.1 || ^>= 1.4,
    text ^>= 2.0
